manifests/home-assistant/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: prd-ext
  labels:
    app: home-assistant
