manifests/home-assistant/manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: home-assistant-mysql
  namespace: prd-ext
  labels:
    app: home-assistant
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: home-assistant-mysql
  template:
    metadata:
      labels:
        app: home-assistant-mysql
    spec:
      containers:
        - name: home-assistant-mysql
          image: mysql:8.0.28
          imagePullPolicy: Always
          volumeMounts:
            - name: home-assistant-data
              mountPath: /var/lib/mysql
      volumes:
        - name: home-assistant-data
          persistentVolumeClaim:
            claimName: home-assistant-data-pvc

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: home-assistant
  namespace: prd-ext
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-worker-01
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:2022.4
          imagePullPolicy: Always
          securityContext:
            privileged: true
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: home-assistant-config
              mountPath: /config
      volumes:
        - name: home-assistant-config
          persistentVolumeClaim:
            claimName: home-assistant-config-pvc

---
kind: Service
apiVersion: v1
metadata:
  name: home-assistant-mysql
  namespace: prd-ext
  labels:
    app: home-assistant
spec:
  selector:
    app: home-assistant-mysql
  type: ClusterIP
  ports:
    - port: 3306
      protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: home-assistant
  namespace: prd-ext
  labels:
    app: home-assistant
spec:
  selector:
    app: home-assistant
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123

---
kind: Service
apiVersion: v1
metadata:
  name: home-assistant
  namespace: prd-int
  labels:
    app: home-assistant
spec:
  type: ExternalName
  externalName: home-assistant.prd-ext.svc.cluster.local
  ports:
    - port: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: home-assistant
  namespace: prd-int
  labels:
    app: home-assistant
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx-private
  rules:
    - host: home-assistant.k8s.lan
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: home-assistant
  namespace: prd-ext
  labels:
    app: home-assistant
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx-public
  rules:
    - host: home-assistant.theautomation.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 80
  tls:
    - hosts:
        - home-assistant.theautomation.nl
      secretName: home-assistant.theautomation.nl-tls
